--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,4 +1,4 @@
-nav {
+.nav {
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
@@ -8,6 +8,7 @@ nav {
   align-items: center;
   height: 5rem;
 }
+
 svg {
   font-size: 3rem;
   color: #fff;
@@ -31,7 +32,8 @@ svg {
   font-weight: bolder;
   font-size: 1.2rem;
 }
-:global(.active) {
+
+.nav :global(.active) {
   background-color: hsl(235, 21%, 21%);
   border-radius: 5px;
   padding: 8px;
@@ -43,8 +45,30 @@ svg {
   height: 100%;
   justify-content: center;
   width: 100px;
+  position: relative;
 }
 
 .userArea svg {
   height: 2rem;
+}
+
+.userNav {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: -40px;
+}
+
+.userNav li {
+  border-bottom: 1px solid #fff .7;
+  background-color: hsl(235, 21%, 21%);
+  cursor: pointer;
+  width: 100px;
+  height: auto;
+  border-radius: 2px;
+  justify-content: center;
+}
+
+.userNav li:hover {
+  color: aquamarine;
 }
