--- a/src/Components/Pages/PhotoPost.module.css
+++ b/src/Components/Pages/PhotoPost.module.css
@@ -1,9 +1,10 @@
 .contentPhotoPost {
   display: flex;
+  flex-direction: row;
   gap: 50px;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+  height: 55vh;
 }
 
 .form {
@@ -19,10 +20,12 @@
   border-radius: 8px;
   text-align: center;
 }
+
 .form label {
   text-align: left;
   margin: 4px 0;
 }
+
 .form input {
   outline: none;
   border: none;
@@ -56,12 +59,14 @@
   font-weight: bolder;
   transition: 0.3s ease-in-out;
 }
+
 .form button:hover {
   background-color: #fff;
   color: hsl(200, 50%, 50%);
 }
+
 img {
-  border-radius: 1rem;
+  border-radius: .4;
   width: 25rem;
-  height: 30rem;
+  height: 35rem;
 }
