--- a/src/Components/Pages/Register.module.css
+++ b/src/Components/Pages/Register.module.css
@@ -1,16 +1,81 @@
 .register__content {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 60vh;
+  height: 100%;
+}
+
+.register__content img {
+  height: 370px;
 }
 
 form {
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   text-align: left;
+  background-color: #fff;
+  padding: 30px;
+  gap: 5px;
+}
+
+hr {
+  height: 3px;
+  border: transparent;
+  background-color: hsl(200, 50%, 50%);
+  border-radius: 2px;
+  margin-top: 5px;
 }
 
 .register__namespot {
   display: flex;
   gap: 10px;
+  margin-top: 10px;
+}
+
+form input {
+  height: 40px;
+  border: 1px solid #bcb7b9;
+}
+
+form input::placeholder {
+  color: #9da7b1;
+  padding: 6px;
+}
+
+form input:focus {
+  border-left: none;
+  border-top: none;
+  border-right: none;
+  border-bottom: 1px solid hsl(200, 50%, 50%);
+}
+
+form span {
+  display: flex;
+  gap: 6px;
+  margin: 10px 0px
+}
+
+form a {
+  color: hsl(200, 50%, 50%);
+  font-weight: bolder;
+}
+
+
+form button {
+  background-color: hsl(200, 50%, 50%);
+  border: none;
+  width: 30%;
+  padding: 10px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: bolder;
+  cursor: pointer;
+  transition: .2s ease-in-out;
+  align-self: flex-start;
+}
+
+form button:hover {
+  background-color: hsl(200, 50%, 40%)
 }
