--- a/src/Components/Pages/Exercises.module.css
+++ b/src/Components/Pages/Exercises.module.css
@@ -1,7 +1,34 @@
+.contentExercises {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+
 .exercisesForm {
   display: flex;
   margin-top: 50px;
   height: 100px;
-  background-color: red;
+  background-color: aquamarine;
   align-items: center;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.exercisesForm select {
+  background: #f2f2f3;
+  border: none;
+  border-radius: 4px;
+  margin-left: 10px;
+  height: 40px;
+}
+
+.exercisesForm button {
+  background-color: hsl(200, 50%, 50%);
+  border: none;
+  padding: 10px;
+  width: 70px;
+  margin-left: 10px;
+  color: #fff;
+  border-radius: 6px;
 }
