--- a/src/Components/Pages/Home.module.css
+++ b/src/Components/Pages/Home.module.css
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  height: 800px;
+  height: 100vh;
   width: 75vw;
+  background-color: red;
 }
 
 section {
@@ -12,7 +12,6 @@ section {
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 50px;
   flex-direction: column;
 }
 
@@ -30,7 +29,9 @@ section {
   font-size: 3rem;
   font-weight: bolder;
   color: #fff;
+  text-align: right;
 }
+
 .main__text h2 {
   font-size: 2.8rem;
   font-weight: bolder;
@@ -41,6 +42,7 @@ section {
   font-size: 1.3rem;
   color: #fff;
 }
+
 .main__text a {
   display: block;
   padding: 20px 25px;
@@ -54,41 +56,10 @@ section {
   font-size: 1.2rem;
   place-self: right;
 }
+
 .mainIMG {
   z-index: 0;
   height: 800px;
   width: 55%;
-  border-radius: 10px;
-}
-
-.navmuscles {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.navmuscles h3 {
-  font-size: 1.8rem;
-  color: #fff;
-}
-
-select {
-  height: 45px;
-  outline: none;
-}
-
-.navmuscles ul {
-  display: flex;
-  list-style: none;
-  color: #fff;
-  flex-wrap: wrap;
-  gap: 5px;
-}
-
-.navmuscles ul li {
-  padding: 10px;
-  cursor: pointer;
   border-radius: 10px;
 }
