--- a/src/Components/Pages/PhotoPost.module.css
+++ b/src/Components/Pages/PhotoPost.module.css
@@ -4,7 +4,7 @@
   gap: 50px;
   align-items: center;
   justify-content: center;
-  height: 55vh;
+  height: 80vh
 }
 
 .form {
@@ -29,11 +29,20 @@
 .form input {
   outline: none;
   border: none;
-  height: 2rem;
+  height: 2.2rem;
+  width: 100%;
   border-radius: 4px;
   background-color: hsl(235, 21%, 21%);
   color: #fff;
   font-size: 1.2rem;
+  box-sizing: border-box;
+  padding:10px;
+}
+
+
+.form input::placeholder {
+  padding: 10px;
+  color: fff;
 }
 
 .form input:focus {
@@ -44,9 +53,15 @@
   background-color: transparent;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; 
+}
+
 .form button {
   display: inline-block;
-  width: 30%;
+  width: 40%;
   align-self: center;
   height: 2rem;
   color: #fff;
@@ -56,7 +71,6 @@
   font-size: 1.2rem;
   cursor: pointer;
   margin-top: 50px;
-  font-weight: bolder;
   transition: 0.3s ease-in-out;
 }
 
