--- a/src/Components/Pages/Home.module.css
+++ b/src/Components/Pages/Home.module.css
@@ -4,16 +4,8 @@
   justify-content: center;
   height: 100vh;
   width: 75vw;
-  background-color: red;
 }
 
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-}
 
 .main__text {
   height: auto;
@@ -23,6 +15,7 @@ section {
   align-items: flex-end;
   left: 0px;
   padding: 30px;
+  text-align: right;
 }
 
 .main__text h1 {
@@ -57,9 +50,13 @@ section {
   place-self: right;
 }
 
+.img{
+  height: 100%;
+  width: 70%;
+}
+
 .mainIMG {
-  z-index: 0;
-  height: 800px;
-  width: 55%;
   border-radius: 10px;
+  height: 100%;
+  width: auto;
 }
