--- a/src/Components/Pages/Exercises.module.css
+++ b/src/Components/Pages/Exercises.module.css
@@ -27,8 +27,11 @@
   background-color: hsl(200, 50%, 50%);
   border: none;
   padding: 10px;
-  width: 70px;
+  width: 80px;
   margin-left: 10px;
   color: #fff;
   border-radius: 6px;
+  cursor: pointer;
+  font-weight: bolder;
 }
+
