--- a/src/Components/Pages/Calendary.module.css
+++ b/src/Components/Pages/Calendary.module.css
@@ -53,10 +53,27 @@ color: black;
 .cardWorkout{
     position:absolute;
     bottom: 10px;
-    height: 30px;
+    height: 40px;
     max-width: 150px;
     margin-bottom: 5px;
     justify-content: center;
+    flex-wrap: wrap;
+    overflow-y: auto;
 }
 
+.button{
+    background-color: hsl(200, 50%, 50%);
+    padding: 8px;
+    border: none;
+    font-weight: bolder;
+    border-radius: 6px;
+    margin-left: 10px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    transition: .2s ease-in;
 
+}
+.button:hover{
+    background-color: hsl(210, 50%, 50%);
+}
